<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_boas_vindas"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgConfirmado"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/cadastro_completo"
        android:contentDescription="@string/imagem_confirmacao" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:layout_marginTop="16dp" />
</LinearLayout>
